fixed coloring of buttons issue on tablet

--- a/CandyMan_css/Start.css
+++ b/CandyMan_css/Start.css
@@ -189,3 +189,59 @@ footer{
 .spoken-response {
     -webkit-transition: all 0.35s ease-in;
 }
+
+@media (hover: none) {
+   .buttons {
+     display: block;
+     justify-content: center;
+     height: 30px;
+     width: 280px;
+     -webkit-transition-duration: 0.4s; /* Safari */
+     transition-duration: 0.4s;
+     font-size: 16px;
+     background-color: white;
+     color: black;
+     border: 2px solid #47A1BF;
+     border-radius: 8px;
+     margin: 40px auto 40px auto;
+     outline: none;
+   }
+
+   #submit {
+       -webkit-transition-duration: 0.4s; /* Safari */
+       transition-duration: 0.4s;
+       font-size: 16px;
+       width: 100px;
+       background-color: white;
+       color: black;
+       border: 2px solid #47A1BF;
+       border-radius: 8px;
+   }
+
+   #getInfo{
+     border-width: 2px;
+     border-color: #47A1BF;
+     height: 30px;
+     color: black;
+     width: 100px;
+     font-size: 16px;
+     margin: 10px;
+     border-radius: 8px;
+     background-color: white;
+   }
+
+   #restart{
+     border-width: 2px;
+     border-color: #47A1BF;
+     display: flex;
+     justify-content: center;
+     height: 30px;
+     color: black;
+     background-color: white;
+     width: 100px;
+     font-size: 15px;
+     /* margin-bottom: 40px; */
+     margin: 10px;
+     border-radius: 8px;
+   }
+}
